2003-08-11  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-insert-field, gdb-array-format1)
	(gdb-info-breakpoints-custom, gdb-info-frames-custom)
	(gdb-info-threads-custom): Add help-echo text.
	(gdb-display-back): Don't use purecopy.
	(gdb-info-breakpoints-custom, gdb-reset)
	(gdb-assembler-custom): Use display-images-p to test if breakpoint
	icons can be displayed.

2003-08-11  Markus Rost  <rost@math.ohio-state.edu>

	* textmodes/reftex-vars.el (reftex-auto-recenter-toc): Fix typo.

2003-08-11  Stefan Monnier  <monnier@cs.yale.edu>

	* bookmark.el (bookmark-completing-read):
	Return a string, instead of a list of one string.
	Use a popup menu if activated from the mouse.
	(bookmark-edit-annotation): Remove unused vars.
	(bookmark-jump, bookmark-relocate, bookmark-insert-location)
	(bookmark-rename, bookmark-insert, bookmark-delete): Adjust calls
	to bookmark-completing-read.
	(bookmark-bmenu-show-filenames, bookmark-bmenu-hide-filenames)
	(bookmark-bmenu-mark, bookmark-bmenu-select, bookmark-bmenu-unmark)
	(bookmark-bmenu-delete, bookmark-bmenu-list): Use inhibit-read-only
	and erase-buffer.
	(bookmark-menu-delete, bookmark-menu-rename, bookmark-menu-locate)
	(bookmark-menu-jump, bookmark-menu-insert)
	(bookmark-popup-menu-and-apply-function)
	(bookmark-menu-popup-paned-bookmark-menu): Remove.
	(bookmark-menu-build-paned-menu): Remove by folding it into
	bookmark-menu-popup-paned-menu.
	(menu-bar-bookmark-map): Move the define-key statements here.
	Use the "non-menu" commands since they now pop up a menu if needed.
	(bookmark-exit-hook-internal): Simplify.

2003-08-11  Carsten Dominik  <dominik@sand.science.uva.nl>

	* textmodes/reftex.el: Updated to version 4.21
	* reftex-auc.el: likewise.
	* reftex-cite.el: likewise.
	* reftex-dcr.el: likewise.
	* reftex-global.el: likewise.
	* reftex-index.el: likewise.
	* reftex-parse.el: likewise.
	* reftex-ref.el: likewise.
	* reftex-sel.el: likewise.
	* reftex-toc.el: likewise.
	* reftex-vars.el: likewise.
